--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,15 +2,14 @@
 name = "file-crypter"
 version = "0.1.0"
 authors = [{ name="batubyte" }]
-
 description = "A file encrypter and decrypter using Fernet symmetric encryption"
 readme = "README.md"
 requires-python = ">=3.8"
-
+license = "MIT"
 dependencies = ["cryptography>=45.0.4"]
 
-license = "MIT"
-license-files = ["LICEN[CS]E*"]
+[project.scripts]
+file_crypter = "file_crypter:main"
 
 [project.urls]
 Github = "https://github.com/batubyte/file-crypter"
